updated/into-vanilla-js

--- a/enterprise-dashboard/.gitignore
+++ b/enterprise-dashboard/.gitignore
@@ -1,24 +1,15 @@
-# Logs
-logs
+# General
+.DS_Store
+Thumbs.db
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Dependency directories (if any future ones added)
+node_modules/
+dist/
+tmp/
